Update image file location.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="/Projects/Personal site/Images/butterfly.png" alt="A butterfly with blue iridescent wings."></td>
+                <td><img src="/Images/butterfly.png" alt="A butterfly with blue iridescent wings."></td>
                 <td><h1>Tracey-Lee Ash</h1><p><em>Junior Industrial Engineer</em> | <em>Founder and director of <a href="/Projects/Little Paris CCB/index.html">Litle Paris Cake & Confection Boutique</a></em> | <em>Aspiring Web & Software Developer</em></p>
                     <p>I am a amiable and super enthusiastic recent graduate and love making sweet treats in my spare time. </p></td>
             </tr>
